Added logic
