# api/api.yaml
@@ -1,94 +1,121 @@
-openapi: 3.0.3
+openapi: 3.0.1
 info:
-  title: Go-chat
-  description: Chat in Golang
+  title: Fancy Golang chat
+  description: Just a simple chat service
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-  - url: http://localhost:8080/
-
-components:
-  schemas:
-    User:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-        name:
-          type: string
-        userName:
-          type: string
-        email:
-          type: string
-        password:
-          type: string
-      required:
-        - name
-        - userName
-        - password
-
-    Error:
-      type: object
-      properties:
-        code:
-          type: integer
-          format: int32
-        message:
-          type: string
-      required:
-        - code
-        - message
-
-
+  - url: /v1
+tags:
+  - name: user
+    description: Operations about user
 paths:
-  /users:
+  /user:
     post:
-      summary: Creates a new user
-      description: Creates a new user
-      operationId: addUser
+      tags:
+        - user
+      summary: Register (create) user
+      operationId: createUser
       requestBody:
-        description: Add user to chat
-        required: true
+        description: Created user object
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/CreateUserRequest'
+        required: true
       responses:
-        '200':
-          description: user response
+        200:
+          description: user created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /users/{id}:
-    get:
-      summary: Returns a user by ID
-      description: Returns a use based on a single ID
-      operationId: findUserByID
-      parameters:
-        - name: id
-          in: path
-          description: ID of user to fetch
-          required: true
-          schema:
-            type: integer
-            format: int32
+                $ref: '#/components/schemas/CreateUserResponse'
+        400:
+          description: Bad request, empty username or id
+          content: {}
+        500:
+          description: Internal Server Error
+          content: {}
+      x-codegen-request-body-name: body
+  /user/login:
+    post:
+      tags:
+        - user
+      summary: Logs user into the system
+      operationId: loginUser
+      requestBody:
+        description: User credendials
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginUserRequest'
+        required: true
       responses:
-        '200':
-          description: user response
+        200:
+          description: successful operation, returns link to join chat
+          headers:
+            X-Rate-Limit:
+              description: calls per hour allowed by the user
+              schema:
+                type: integer
+                format: int32
+            X-Expires-After:
+              description: date in UTC when token expires
+              schema:
+                type: string
+                format: date-time
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/LoginUserResonse'
+        400:
+          description: Invalid username/password
+          content: {}
+        500:
+          description: Internal Server Error
+          content: {}
+components:
+  schemas:
+    LoginUserRequest:
+      required:
+        - password
+        - userName
+      type: object
+      properties:
+        userName:
+          type: string
+          description: The user name for login
+        password:
+          type: string
+          description: The password for login in clear text
+    LoginUserResonse:
+      required:
+        - url
+      type: object
+      properties:
+        url:
+          type: string
+          description: A url for websoket API with a one-time token for starting chat
+          example: ws://fancy-chat.io/ws&token=one-time-token
+    CreateUserRequest:
+      required:
+        - password
+        - userName
+      type: object
+      properties:
+        userName:
+          minLength: 4
+          type: string
+        password:
+          minLength: 8
+          type: string
+    CreateUserResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        userName:
+          type: string
