# internal/models/CreateUserRequest.go
@@ -1,0 +1,6 @@
+package models
+
+type CreateUserRequest struct {
+	UserName     string  `json:"userName" validate:"string,min=4"`
+	Password     string  `json:"password" validate:"string,min=8"`
+}
