# internal/models/CreateUserResponse.go
@@ -1,0 +1,7 @@
+package models
+
+type CreateUserResponse struct {
+	Id     		 string  `json:"id"`
+	UserName     string  `json:"userName"`
+
+}
